// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`immutableToJS convertAllImmutablePropsToJS converts all immutable props to built in js 1`] = `
<MutableDummy
  immutableProp={
    Object {
      "list": Array [
        Object {
          "foo": "bar1",
        },
        Object {
          "foo": "bar2",
        },
      ],
    }
  }
  mutableProp={
    Object {
      "array": Array [
        Object {
          "foo": "bar",
        },
      ],
    }
  }
  primitiveProp="string"
/>
`;

exports[`immutableToJS convertSomeImmutablePropsToJS converts some immutable props to built in js 1`] = `
<MutableDummy
  immutableProp1={
    Object {
      "list": Array [
        Object {
          "foo": "bar1",
        },
        Object {
          "foo": "bar2",
        },
      ],
    }
  }
  immutableProp2={
    Immutable.Map {
      "foo": "bar",
    }
  }
  mutableProp={
    Object {
      "array": Array [
        Object {
          "foo": "bar",
        },
      ],
    }
  }
  primitiveProp="string"
/>
`;
